<?xml version="1.0"?>
<package format="2">
    <name>hd_map</name>
    <description>hd_map</description>
    <version>0.1.0</version>
    <maintainer email="phillip.haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Phillip Haeusler</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>

    <exec_depend>message_runtime</exec_depend>
</package>
