<?xml version="1.0"?>
<package format="2">
    <name>map_manager</name>
    <description>map_manager</description>
    <version>1.0.0</version>
    <maintainer email="phillip.haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Phillip Haeusler</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>graph_map</depend>
    <depend>message_generation</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>python-types-requests</depend>

    <exec_depend>math6d</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>python-blinker</exec_depend>
    <exec_depend>python3-ezdxf</exec_depend>
    <exec_depend>python3-flask</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>
    <exec_depend>python-mongoengine</exec_depend>
    <exec_depend>python3-networkx</exec_depend>
    <exec_depend>python3-opengl</exec_depend>
    <exec_depend>python3-pymongo</exec_depend>
    <exec_depend>python3-requests</exec_depend>
    <exec_depend>python-typing</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <test_depend>rostest</test_depend>
</package>
