<?xml version="1.0"?>
<package format="3">
    <name>map_manager</name>
    <description>map_manager</description>
    <version>1.0.0</version>
    <maintainer email="phillip.haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Phillip Haeusler</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <!--<buildtool_depend>rosidl_default_generators</buildtool_depend>-->


    <depend>graph_map</depend>
    <depend>map_manager_msgs</depend>
    <depend>python-types-requests</depend>

    <!--<depend>message_generation</depend>-->
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <!--<exec_depend>rosidl_default_runtime</exec_depend>-->
    <exec_depend>math6d</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>python-blinker</exec_depend>
    <exec_depend>python3-ezdxf</exec_depend>
    <exec_depend>python-flask</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>
    <exec_depend>python-mongoengine</exec_depend>
    <exec_depend>python3-networkx</exec_depend>
    <exec_depend>python3-opengl</exec_depend>
    <exec_depend>python3-pymongo</exec_depend>
    <exec_depend>python3-requests</exec_depend>
    <exec_depend>python-typing</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf2_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>