<?xml version="1.0"?>
<package format="3">
  <name>map_manager_msgs</name>
  <version>1.0.0</version>s
  <maintainer email="phillip.haeusler@boeing.com">Phillip Haeusler</maintainer>
  <author>Phillip Haeusler</author>
  <license>Boeing Proprietary</license>

  <description>Contains the required messages for Map Manager package</description>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
