<?xml version="1.0"?>
<package format="2">
    <name>modular_move_base</name>
    <version>0.1.0</version>
    <description>Fork of move_base</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>cmake_modules</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>move_base_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>

</package>
