<?xml version="1.0"?>
<package format="2">
    <name>modular_navigation</name>
    <version>0.1.0</version>
    <description>modular_navigation metapackage</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>eband_local_planner</exec_depend>
    <exec_depend>global_planner</exec_depend>
    <exec_depend>modular_move_base</exec_depend>
    <exec_depend>modular_navigation</exec_depend>
    <exec_depend>nav_core</exec_depend>
    <exec_depend>omni_pid_controller</exec_depend>
    <exec_depend>omni_rrt_planner</exec_depend>
    <exec_depend>rrt_local_planner</exec_depend>
    <exec_depend>voxel_grid</exec_depend>

    <export>
        <metapackage/>
    </export>

</package>
